using System.ComponentModel;

public enum AppointmentHistoryType
{
    [Description("Appointment")]
    Appointment = 1,
    [Description("Operation Request")]    
    OperationRequest = 2 

}
