export interface Allergy {
    code : string;
    designation : string;
    description? : string;
}