@startuml
'https://plantuml.com/class-diagram

title "US 7.2.6 - Domain Model"

package "<<aggregate>> Patient" {
    entity Patient <<entity>> <<root>> {}
    class DateBirth <<(V,#FF8B40)value object>> {}
    class Gender <<(V,#FF8B40)value object>> {}
    class EmergencyContact <<(V,#FF8B40)value object>> {}
    class MRN <<(V,#FF8B40)value object>> <<identifier>> {}
    class AppointmentHistory <<(V,#FF8B40)value object>> {}
    class AppointmentHistoryStatus <<(V,#FF8B40)value object>> {}
    class AppointmentHistoryType <<(V,#FF8B40)value object>> {}
    class CreatedAt <<(V,#FF8B40)value object>> {}
    class Name <<(V,#FF8B40)value object>> {}
    class FirstName <<(V,#FF8B40)value object>> {}
    class LastName <<(V,#FF8B40)value object>> {}
    class FullName <<(V,#FF8B40)value object>> {}
    class Phone <<(V,#FF8B40)value object>> {}
    class Email <<(V,#FF8B40)value object>> {}
    class Address <<(V,#FF8B40)value object>> {}
    class Status <<(V,#FF8B40)value object>> {}
}

package "<<aggregate MedicalRecord>>" {
    entity MedicalRecord <<entity>><<root>>{}
    class MedicalRecordDescription <<(V,#FF8B40)value object>> <<identifier>> {}
}



package "<<aggregate MedicalCondition>>" {
    entity MedicalCondition <<entity>><<root>>{}
    class MedicalConditionDesignation <<(V,#FF8B40)value object>> <<identifier>> {}
    class MedicalConditionCode <<(V,#FF8B40)value object>> <<identifier>> {}
    class MedicalConditionDescription <<(V,#FF8B40)value object>> <<identifier>> {}
}

package "<<aggregate Allergy>>" {
    entity Allergy <<entity>><<root>>{}
    class AllergyDesignation <<(V,#FF8B40)value object>> <<identifier>> {}
    class AllergyCode <<(V,#FF8B40)value object>> <<identifier>> {}
    class AllergyDescription <<(V,#FF8B40)value object>> <<identifier>> {}
}

package "<<aggregate Doctor>>" {
    entity Doctor <<entity>><<root>>{}
}


Name --> FirstName
Name -> LastName
Name --> FullName

Patient -> "1" Status
Patient ---> "1" Name
Patient --> "1" DateBirth
Patient --> "1" Gender
Patient --> "1" EmergencyContact
Patient --> "1" MRN
Patient --> "1" MedicalRecord
MedicalRecord --> "0..*" MedicalCondition
MedicalRecord --> "0..*" Allergy
MedicalRecord --> "1" AppointmentHistory
Patient --> "0..*" AppointmentHistory
Patient --> "0..1" MedicalCondition
Patient --> "1" Email
Patient -> "1" Phone
Patient --> "1" Address
EmergencyContact -> "1" Phone

AppointmentHistory --> "1" AppointmentHistoryStatus
AppointmentHistory --> "1" AppointmentHistoryType
AppointmentHistory --> "1" CreatedAt

MedicalRecord --> "0..*" MedicalCondition
MedicalRecord --> "0..*" Allergy
MedicalRecord -> MedicalRecordDescription
Doctor ---> "0..*" MedicalRecord

Allergy --> "1" AllergyCode
Allergy --> "0..1" AllergyDescription
Allergy --> "1" AllergyDesignation

MedicalCondition --> "1" MedicalConditionCode
MedicalCondition --> "0..1" MedicalConditionDescription
MedicalCondition --> "1" MedicalConditionDesignation

@enduml